--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
       <section class="principal__posts post">
         <div class="post__head">
           <p class="post__data">02 de jul, 2021</p>
-          <img
-            src="assets/heart.svg"
-            alt="Botão de like"
-            class="post__botao post__botao--click"
-          />
+          <button id="btn" class="post__botao botao">
+            <img
+              src="assets/heart.svg"
+              alt="Botão de like"
+              class="botao__imagem"
+            />
+        </button>
         </div>
 
         <div class="post__conteudo">
@@ -50,11 +52,11 @@
 
       <section class="principal__posts post">
         <div class="post__head">
-          <p class="post__data">02 de jul, 2021</p>
+          <p class="post__data">03 de jul, 2021</p>
           <img
             src="assets/heart.svg"
             alt="Botão de like"
-            class="post__botao post__botao--click"
+            class="botao__imagem"
           />
         </div>
 
@@ -67,12 +69,14 @@
 
       <section class="principal__posts post">
         <div class="post__head">
-          <p class="post__data">02 de jul, 2021</p>
-          <img
-            src="assets/heart.svg"
-            alt="Botão de like"
-            class="post__botao post__botao--click"
-          />
+          <p class="post__data">04 de jul, 2021</p>
+          <button id="btnh1" class="post__botao">
+            <img
+              src="assets/heart.svg"
+              alt="Botão de like"
+              class="botao__imagem"
+            />
+          </button>
         </div>
 
         <div class="post__conteudo">
@@ -85,11 +89,11 @@
 
       <section class="principal__posts post">
         <div class="post__head">
-          <p class="post__data">02 de jul, 2021</p>
+          <p class="post__data">05 de jul, 2021</p>
           <img
             src="assets/heart.svg"
             alt="Botão de like"
-            class="post__botao post__botao--click"
+            class="botao__imagem"
           />
         </div>
 
@@ -102,11 +106,11 @@
 
       <section class="principal__posts post">
         <div class="post__head">
-          <p class="post__data">02 de jul, 2021</p>
+          <p class="post__data">06 de jul, 2021</p>
           <img
             src="assets/heart.svg"
             alt="Botão de like"
-            class="post__botao post__botao--click"
+            class="botao__imagem"
           />
         </div>
 
@@ -118,5 +122,6 @@
       </section>
     </main>
 
+   
   </body>
 </html>
