--- a/index.html
+++ b/index.html
@@ -4,124 +4,135 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lexend+Deca:wght@200;300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Lexend+Deca:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Codelândia | Blog</title>
+    <script
+      src="https://kit.fontawesome.com/ef4c920953.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Codelandia | Blog</title>
   </head>
-
   <body>
-    <header class="cabecalho">
-      <div class="cabecalho__textos">
-        <p class="cabecalho__titulo">Codêlandia</p>
-        <p class="cabecalho__titulo">blog</p>
+    <header class="header">
+      <div class="header__text">
+        <p>Codelândia</p>
+        <p>blog</p>
       </div>
-      <div class="pesquisar">
-        <form class="pesquisar__form">
-          <input type="text" name="" placeholder="Pesquisar no blog" />
-        </form>
-      </div>
+      <form class="header__search">
+        <input type="text" name="search" placeholder="Pesquisar no blog" />
+      </form>
     </header>
 
-    <main class="principal">
-      <section class="principal__posts post">
-        <div class="post__head">
-          <p class="post__data">02 de jul, 2021</p>
-          <button id="btn" class="post__botao botao">
-            <img
-              src="assets/heart.svg"
-              alt="Botão de like"
-              class="botao__imagem"
+    <main class="main">
+      <section class="cards">
+        <div class="card__date">
+          <p>02 de jul, 2021</p>
+          <svg
+            width="20"
+            height="18"
+            viewBox="0 0 20 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.46 4.57249C19.349 4.13825 19.1778 3.7217 18.9512 3.33499C18.7336 2.9327 18.4554 2.56633 18.1262 2.24874C17.6491 1.77317 17.084 1.3949 16.4625 1.13499C15.2115 0.621549 13.8085 0.621549 12.5575 1.13499C11.97 1.38364 11.4303 1.73259 10.9625 2.16624L10.8937 2.24874L9.99999 3.14249L9.10624 2.24874L9.03749 2.16624C8.56965 1.73259 8.02994 1.38364 7.44249 1.13499C6.19145 0.621549 4.78853 0.621549 3.53749 1.13499C2.91597 1.3949 2.3509 1.77317 1.87374 2.24874C1.22111 2.88375 0.759126 3.68866 0.539991 4.57249C0.423411 5.02132 0.367911 5.48382 0.374991 5.94749C0.374991 6.38336 0.429991 6.81786 0.539991 7.23999C0.655262 7.6663 0.821459 8.07717 1.03499 8.46374C1.2656 8.86112 1.54761 9.22636 1.87374 9.54999L9.99999 17.6762L18.1262 9.54999C18.4521 9.22961 18.7312 8.86249 18.9512 8.46374C19.3978 7.70076 19.6306 6.83154 19.625 5.94749C19.6321 5.48382 19.5766 5.02131 19.46 4.57249ZM18.085 6.81374C17.9203 7.442 17.5931 8.01582 17.1362 8.47749L9.97249 15.6275L2.80874 8.47749C2.5753 8.24239 2.37206 7.97911 2.20374 7.69374C2.04535 7.41142 1.92074 7.11144 1.83249 6.79999C1.76204 6.48858 1.72516 6.17051 1.72249 5.85124C1.72436 5.52284 1.76123 5.19557 1.83249 4.87499C1.91815 4.56264 2.04289 4.26235 2.20374 3.98124C2.36874 3.69249 2.57224 3.43124 2.80874 3.19749C3.16197 2.84899 3.57695 2.56923 4.03249 2.37249C4.95046 2.00526 5.97452 2.00526 6.89249 2.37249C7.34624 2.56086 7.75599 2.83724 8.10249 3.18374L9.97249 5.06749L11.8425 3.18374C12.1887 2.83662 12.5999 2.56098 13.0525 2.37249C13.9705 2.00526 14.9945 2.00526 15.9125 2.37249C16.3676 2.56911 16.7829 2.84961 17.1362 3.19749C17.3755 3.42436 17.5762 3.68836 17.7275 3.98124C18.046 4.54287 18.2119 5.1781 18.2087 5.82374C18.2274 6.15597 18.1997 6.48919 18.1262 6.81374H18.085Z"
+              fill="#574AE8"
             />
-        </button>
+          </svg>
         </div>
-
-        <div class="post__conteudo">
-          <h1 class="post__titulo">Agora é oficial: o Windows 11 está vindo</h1>
-          <p class="post__paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam animi qui voluptates ab totam praesentium dolorem sint magnam corrupti dolor?</p>
+        <div class="card__text">
+          <p>Agora é oficial: o Windows 11 está vindo</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+            vestibulum auctor est. Nam vitae finibus ante. Duis lobortis tellus
+            vel diam fringilla, eu ullamcorper ex iaculis.
           </p>
         </div>
       </section>
 
-      <section class="principal__posts post">
-        <div class="post__head">
-          <p class="post__data">03 de jul, 2021</p>
-          <img
-            src="assets/heart.svg"
-            alt="Botão de like"
-            class="botao__imagem"
-          />
-        </div>
-
-        <div class="post__conteudo">
-          <h1 class="post__titulo">Tim Berners-Lee vai leiloar código fonte da web</h1>
-          <p class="post__paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam veritatis voluptate impedit et eum beatae ipsa? Incidunt atque nesciunt facilis.</p>
-          </p>
-        </div>
-      </section>
-
-      <section class="principal__posts post">
-        <div class="post__head">
-          <p class="post__data">04 de jul, 2021</p>
-          <button id="btnh1" class="post__botao">
-            <img
-              src="assets/heart.svg"
-              alt="Botão de like"
-              class="botao__imagem"
+      <section class="cards">
+        <div class="card__date">
+          <p>03 de jul, 2021</p>
+          <svg
+            width="20"
+            height="18"
+            viewBox="0 0 20 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.46 4.57249C19.349 4.13825 19.1778 3.7217 18.9512 3.33499C18.7336 2.9327 18.4554 2.56633 18.1262 2.24874C17.6491 1.77317 17.084 1.3949 16.4625 1.13499C15.2115 0.621549 13.8085 0.621549 12.5575 1.13499C11.97 1.38364 11.4303 1.73259 10.9625 2.16624L10.8937 2.24874L9.99999 3.14249L9.10624 2.24874L9.03749 2.16624C8.56965 1.73259 8.02994 1.38364 7.44249 1.13499C6.19145 0.621549 4.78853 0.621549 3.53749 1.13499C2.91597 1.3949 2.3509 1.77317 1.87374 2.24874C1.22111 2.88375 0.759126 3.68866 0.539991 4.57249C0.423411 5.02132 0.367911 5.48382 0.374991 5.94749C0.374991 6.38336 0.429991 6.81786 0.539991 7.23999C0.655262 7.6663 0.821459 8.07717 1.03499 8.46374C1.2656 8.86112 1.54761 9.22636 1.87374 9.54999L9.99999 17.6762L18.1262 9.54999C18.4521 9.22961 18.7312 8.86249 18.9512 8.46374C19.3978 7.70076 19.6306 6.83154 19.625 5.94749C19.6321 5.48382 19.5766 5.02131 19.46 4.57249ZM18.085 6.81374C17.9203 7.442 17.5931 8.01582 17.1362 8.47749L9.97249 15.6275L2.80874 8.47749C2.5753 8.24239 2.37206 7.97911 2.20374 7.69374C2.04535 7.41142 1.92074 7.11144 1.83249 6.79999C1.76204 6.48858 1.72516 6.17051 1.72249 5.85124C1.72436 5.52284 1.76123 5.19557 1.83249 4.87499C1.91815 4.56264 2.04289 4.26235 2.20374 3.98124C2.36874 3.69249 2.57224 3.43124 2.80874 3.19749C3.16197 2.84899 3.57695 2.56923 4.03249 2.37249C4.95046 2.00526 5.97452 2.00526 6.89249 2.37249C7.34624 2.56086 7.75599 2.83724 8.10249 3.18374L9.97249 5.06749L11.8425 3.18374C12.1887 2.83662 12.5999 2.56098 13.0525 2.37249C13.9705 2.00526 14.9945 2.00526 15.9125 2.37249C16.3676 2.56911 16.7829 2.84961 17.1362 3.19749C17.3755 3.42436 17.5762 3.68836 17.7275 3.98124C18.046 4.54287 18.2119 5.1781 18.2087 5.82374C18.2274 6.15597 18.1997 6.48919 18.1262 6.81374H18.085Z"
+              fill="#574AE8"
             />
-          </button>
+          </svg>
         </div>
-
-        <div class="post__conteudo">
-          <h1 class="post__titulo">Tem Firefox novo no pedaço e você vai querer migrar</h1>
-          <p class="post__paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente fuga quidem dolorem, odio voluptates, eius laboriosam quia esse doloribus accusamus voluptatibus iure veniam, suscipit a.
-          </p>
-          </p>
-        </div>
-      </section>
-
-      <section class="principal__posts post">
-        <div class="post__head">
-          <p class="post__data">05 de jul, 2021</p>
-          <img
-            src="assets/heart.svg"
-            alt="Botão de like"
-            class="botao__imagem"
-          />
-        </div>
-
-        <div class="post__conteudo">
-          <h1 class="post__titulo">John McAfee, criador do antivírus McAfee, morre</h1>
-          <p class="post__paragrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit maxime voluptates architecto! Deserunt, debitis deleniti ipsum cum, repellendus et perferendis repellat reprehenderit quaerat fugiat similique labore, tempora cumque unde pariatur.</p>
+        <div class="card__text">
+          <p>Tim Berners-Lee vai leiloar código-fonte da web</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+            hendrerit lectus libero, id efficitur arcu viverra ac. Etiam sed
+            sagittis velit, vitae convallis turpis. Praesent in purus non tellus
+            tincidunt fermentum eu at sem. Curabitur lacus libero.
           </p>
         </div>
       </section>
 
-      <section class="principal__posts post">
-        <div class="post__head">
-          <p class="post__data">06 de jul, 2021</p>
-          <img
-            src="assets/heart.svg"
-            alt="Botão de like"
-            class="botao__imagem"
-          />
+      <section class="cards">
+        <div class="card__date">
+          <p>04 de jul, 2021</p>
+          <svg
+            width="20"
+            height="18"
+            viewBox="0 0 20 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.46 4.57249C19.349 4.13825 19.1778 3.7217 18.9512 3.33499C18.7336 2.9327 18.4554 2.56633 18.1262 2.24874C17.6491 1.77317 17.084 1.3949 16.4625 1.13499C15.2115 0.621549 13.8085 0.621549 12.5575 1.13499C11.97 1.38364 11.4303 1.73259 10.9625 2.16624L10.8937 2.24874L9.99999 3.14249L9.10624 2.24874L9.03749 2.16624C8.56965 1.73259 8.02994 1.38364 7.44249 1.13499C6.19145 0.621549 4.78853 0.621549 3.53749 1.13499C2.91597 1.3949 2.3509 1.77317 1.87374 2.24874C1.22111 2.88375 0.759126 3.68866 0.539991 4.57249C0.423411 5.02132 0.367911 5.48382 0.374991 5.94749C0.374991 6.38336 0.429991 6.81786 0.539991 7.23999C0.655262 7.6663 0.821459 8.07717 1.03499 8.46374C1.2656 8.86112 1.54761 9.22636 1.87374 9.54999L9.99999 17.6762L18.1262 9.54999C18.4521 9.22961 18.7312 8.86249 18.9512 8.46374C19.3978 7.70076 19.6306 6.83154 19.625 5.94749C19.6321 5.48382 19.5766 5.02131 19.46 4.57249ZM18.085 6.81374C17.9203 7.442 17.5931 8.01582 17.1362 8.47749L9.97249 15.6275L2.80874 8.47749C2.5753 8.24239 2.37206 7.97911 2.20374 7.69374C2.04535 7.41142 1.92074 7.11144 1.83249 6.79999C1.76204 6.48858 1.72516 6.17051 1.72249 5.85124C1.72436 5.52284 1.76123 5.19557 1.83249 4.87499C1.91815 4.56264 2.04289 4.26235 2.20374 3.98124C2.36874 3.69249 2.57224 3.43124 2.80874 3.19749C3.16197 2.84899 3.57695 2.56923 4.03249 2.37249C4.95046 2.00526 5.97452 2.00526 6.89249 2.37249C7.34624 2.56086 7.75599 2.83724 8.10249 3.18374L9.97249 5.06749L11.8425 3.18374C12.1887 2.83662 12.5999 2.56098 13.0525 2.37249C13.9705 2.00526 14.9945 2.00526 15.9125 2.37249C16.3676 2.56911 16.7829 2.84961 17.1362 3.19749C17.3755 3.42436 17.5762 3.68836 17.7275 3.98124C18.046 4.54287 18.2119 5.1781 18.2087 5.82374C18.2274 6.15597 18.1997 6.48919 18.1262 6.81374H18.085Z"
+              fill="#574AE8"
+            />
+          </svg>
         </div>
+        <div class="card__text">
+          <p>Tem Firefox novo no pedaço e você vai quer migrar</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+            vestibulum auctor est.
+          </p>
+        </div>
+      </section>
 
-        <div class="post__conteudo">
-          <h1 class="post__titulo">Programar é muito legal, pena que sou meio burro</h1>
-          <p class="post__paragrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus eius itaque deleniti mollitia magni, praesentium quas, nulla quaerat iste quos quam eligendi inventore facilis? Voluptatem nostrum corrupti dolores minima, laudantium ab repellat libero obcaecati blanditiis.</p>
+      <section class="cards">
+        <div class="card__date">
+          <p>04 de jul, 2021</p>
+          <svg
+            width="20"
+            height="18"
+            viewBox="0 0 20 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.46 4.57249C19.349 4.13825 19.1778 3.7217 18.9512 3.33499C18.7336 2.9327 18.4554 2.56633 18.1262 2.24874C17.6491 1.77317 17.084 1.3949 16.4625 1.13499C15.2115 0.621549 13.8085 0.621549 12.5575 1.13499C11.97 1.38364 11.4303 1.73259 10.9625 2.16624L10.8937 2.24874L9.99999 3.14249L9.10624 2.24874L9.03749 2.16624C8.56965 1.73259 8.02994 1.38364 7.44249 1.13499C6.19145 0.621549 4.78853 0.621549 3.53749 1.13499C2.91597 1.3949 2.3509 1.77317 1.87374 2.24874C1.22111 2.88375 0.759126 3.68866 0.539991 4.57249C0.423411 5.02132 0.367911 5.48382 0.374991 5.94749C0.374991 6.38336 0.429991 6.81786 0.539991 7.23999C0.655262 7.6663 0.821459 8.07717 1.03499 8.46374C1.2656 8.86112 1.54761 9.22636 1.87374 9.54999L9.99999 17.6762L18.1262 9.54999C18.4521 9.22961 18.7312 8.86249 18.9512 8.46374C19.3978 7.70076 19.6306 6.83154 19.625 5.94749C19.6321 5.48382 19.5766 5.02131 19.46 4.57249ZM18.085 6.81374C17.9203 7.442 17.5931 8.01582 17.1362 8.47749L9.97249 15.6275L2.80874 8.47749C2.5753 8.24239 2.37206 7.97911 2.20374 7.69374C2.04535 7.41142 1.92074 7.11144 1.83249 6.79999C1.76204 6.48858 1.72516 6.17051 1.72249 5.85124C1.72436 5.52284 1.76123 5.19557 1.83249 4.87499C1.91815 4.56264 2.04289 4.26235 2.20374 3.98124C2.36874 3.69249 2.57224 3.43124 2.80874 3.19749C3.16197 2.84899 3.57695 2.56923 4.03249 2.37249C4.95046 2.00526 5.97452 2.00526 6.89249 2.37249C7.34624 2.56086 7.75599 2.83724 8.10249 3.18374L9.97249 5.06749L11.8425 3.18374C12.1887 2.83662 12.5999 2.56098 13.0525 2.37249C13.9705 2.00526 14.9945 2.00526 15.9125 2.37249C16.3676 2.56911 16.7829 2.84961 17.1362 3.19749C17.3755 3.42436 17.5762 3.68836 17.7275 3.98124C18.046 4.54287 18.2119 5.1781 18.2087 5.82374C18.2274 6.15597 18.1997 6.48919 18.1262 6.81374H18.085Z"
+              fill="#574AE8"
+            />
+          </svg>
+        </div>
+        <div class="card__text">
+          <p>John MCAfee, criador do antivírus McAfee, morre</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+            hendrerit lectus libero, id efficitur arcu viverra ac. Etiam sed
+            sagittis velit, vitae convallis turpis. Praesent in purus non tellus
+            tincidunt fermentum eu at sem. Curabitur lacus libero.
           </p>
         </div>
       </section>
     </main>
-
-   
   </body>
 </html>
